--- a/index.html
+++ b/index.html
@@ -3,3 +3,9 @@
 <h1> MBWA </h1>
 
 <p> RICH KID </p>
+
+<title> Young Gabby </title>
+
+<h1> YOU WILL BE RICH SOON. DO NOT WORRY! </h1>
+
+<p> I was grown up in Florida. Labelle city. Born 2005. I am single. Ready to mingle. </p>
