--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ https://cdn.standardmedia.co.ke/images/wysiwyg/images/87b3RZipyhCMO6XgMGMNH5FaSi
       <p class="caption">Tutorial 1: Nganya Parties</p>
     </div>
     <div class="video-item">
-<iframe width="100%" height="100%" src="https://https://https://youtu.be/cz5oiU321j8>
+<iframe width="100%" height="100%" src="https://youtu.be/W8AWNblByEs>
 </iframe>
       <p class="caption">Tutorial 2: Last year kenya huan</p>
     </div>
@@ -237,6 +237,7 @@ https://cdn.standardmedia.co.ke/images/wysiwyg/images/87b3RZipyhCMO6XgMGMNH5FaSi
   </footer>
 </body>
 </html>
+
 
 
 
