--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@ https://cdn.standardmedia.co.ke/images/wysiwyg/images/87b3RZipyhCMO6XgMGMNH5FaSi
     <h1>My Video Gallery</h1>
   <div class="video-gallery">
     <div class="video-item">
-<iframe width="100%" height="100%" src="ttps://https://www.https://youtu.be/W8AWNblByEs">
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/tgbNymZ7vqY">
 </iframe>
       <p class="caption">Tutorial 1: Nganya Parties</p>
     </div>
     <div class="video-item">
-<iframe width="100%" height="100%" src="https://youtu.be/W8AWNblByEs>
+<iframe width="100%" height="100%" src="https://https://https://youtu.be/cz5oiU321j8>
 </iframe>
       <p class="caption">Tutorial 2: Last year kenya huan</p>
     </div>
@@ -237,9 +237,3 @@ https://cdn.standardmedia.co.ke/images/wysiwyg/images/87b3RZipyhCMO6XgMGMNH5FaSi
   </footer>
 </body>
 </html>
-
-
-
-
-
-
