--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ https://cdn.standardmedia.co.ke/images/wysiwyg/images/87b3RZipyhCMO6XgMGMNH5FaSi
     <h1>My Video Gallery</h1>
   <div class="video-gallery">
     <div class="video-item">
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/DyEVNRsC6so">
 </iframe>
       <p class="caption">Tutorial 1: Nganya Parties</p>
     </div>
@@ -237,3 +237,4 @@ https://cdn.standardmedia.co.ke/images/wysiwyg/images/87b3RZipyhCMO6XgMGMNH5FaSi
   </footer>
 </body>
 </html>
+
