--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ https://cdn.standardmedia.co.ke/images/wysiwyg/images/87b3RZipyhCMO6XgMGMNH5FaSi
       <p class="caption">Tutorial 2: Last year kenya huan</p>
     </div>
     <div class="video-item">
-<iframe width="100%" height="100%" src="https://https://youtu.be/0fk0vYnTrPs">
+<iframe width="100%" height="100%" src="https://www.youtu.be/embed/0fk0vYnTrPs">
 </iframe>
       <p class="caption">Tutorial 3: PURE HAPPINESS</p>
     </div>
@@ -237,6 +237,7 @@ https://cdn.standardmedia.co.ke/images/wysiwyg/images/87b3RZipyhCMO6XgMGMNH5FaSi
   </footer>
 </body>
 </html>
+
 
 
 
