--- a/index.html
+++ b/index.html
@@ -220,17 +220,8 @@ https://cdn.standardmedia.co.ke/images/wysiwyg/images/87b3RZipyhCMO6XgMGMNH5FaSi
 </iframe>
       <p class="caption">Tutorial 1: Nganya Parties</p>
     </div>
-    <div class="video-item">
-<iframe width="100%" height="100%" src="https://www.youtu.be/embed/jr7Pukp146Y">
-</iframe>
-      <p class="caption">Tutorial 2: Last year kenya huan</p>
-    </div>
-    <div class="video-item">
-<iframe width="100%" height="100%" src="https://www.youtu.be/embed/0fk0vYnTrPs">
-</iframe>
-      <p class="caption">Tutorial 3: PURE HAPPINESS</p>
-    </div>
-  </div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/B6KAjekGDWM?si=7QZe47hR51zJzTCo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xbrR58YPK0E?si=3v3bw3mkYUUHuhsN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   
   <footer>
@@ -238,6 +229,7 @@ https://cdn.standardmedia.co.ke/images/wysiwyg/images/87b3RZipyhCMO6XgMGMNH5FaSi
   </footer>
 </body>
 </html>
+
 
 
 
